force-app/main/default/objects/Budget_Line_Item__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>For XactAnalysis estimate import to budget</description>
    <label>Activity Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>