force-app/main/default/objects/Budget_Line_Item__c/fields/Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Costs__c</fullName>
    <formula>IF(AND(Subcontractor_bid__c = 0, In_House_Total__c = 0, Materials__c = 0), Subcontractor_bid__c + In_House_Total__c + Materials__c + Equipment__c + Other_Costs__c, Subcontractor_bid__c + In_House_Total__c + Materials__c + Equipment__c + Other_Costs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>