force-app/main/default/objects/Budget_Line_Item__c/fields/Actual_Costs_BL__c.field-meta.xml
<CustomField>
    <fullName>Actual_Costs_BL__c</fullName>
    <description>For XactAnalysis estimate import to budget</description>
    <label>Actual Costs BL</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>