force-app/main/default/objects/Budget_Line_Item__c/fields/Actuals_Cost_BL__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Cost_BL__c</fullName>
    <formula>IF(AND(In_House_Total_BL__c= 0, Materials_BL__c= 0), In_House_Total_BL__c+ Materials_BL__c, In_House_Total_BL__c+ Materials_BL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost BL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>