force-app/main/default/objects/Budget_Line_Item__c/fields/Allocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Amount__c</fullName>
    <description>This will bring the value of allocation formula so we can use it on Subtotal Rollup summary.</description>
    <label>Allocation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>