force-app/main/default/objects/Budget_Line_Item__c/fields/Allocation_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Overhead__c</fullName>
    <formula>TEXT(Budget__r.Allocation_Overhead__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Overhead</label>
    <type>Text</type>
</CustomField>