force-app/main/default/objects/Budget_Line_Item__c/fields/Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage__c</fullName>
    <formula>CASE(Allocation_Overhead__c, &quot;1/1&quot;, (1/10)/100, &quot;2/2&quot;, (2/10)/100, &quot;3/3&quot;, (3/10)/100, &quot;4/4&quot;, (4/10)/100, &quot;5/5&quot;, (5/10)/100, &quot;6/6&quot;, (6/10)/100, &quot;7/7&quot;, (7/10)/100, &quot;8/8&quot;, (8/10)/100, &quot;9/9&quot;, (9/10)/100, &quot;10/10&quot;, 1/100, &quot;10/5&quot;,(7.5/10)/100 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>