force-app/main/default/objects/Budget_Line_Item__c/fields/Allocations__c.field-meta.xml
<CustomField>
    <fullName>Allocations__c</fullName>
    <formula>Revenue__c  *  VALUE(TEXT(Budget__r.Allocations__c)) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>