force-app/main/default/objects/Budget_Line_Item__c/fields/BlankValue__c.field-meta.xml
<CustomField>
    <fullName>BlankValue__c</fullName>
    <label>BlankValue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0/0</fullName>
                <default>true</default>
                <label>0/0</label>
            </value>
            <value>
                <fullName>1/1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>