force-app/main/default/objects/Budget_Line_Item__c/fields/Budget_Goal__c.field-meta.xml
<CustomField>
    <fullName>Budget_Goal__c</fullName>
    <description>Revenue minus selected budget goal, minus selected allocations, minus selected program fees, plus 20% if using 10/10 allocations</description>
    <formula>Revenue__c -

(Revenue__c*(VALUE(TEXT( GP__c))/100)) -

(Revenue__c*(VALUE(TEXT(Budget__r.Allocations__c))/100)) -

(Revenue__c*(VALUE(TEXT(Budget__r.X3_Program_Fees__c))/100)) +



(IF(X10_10_Allocation__c == true, (Allocation_Percentage__c*20)*(Revenue__c -

(Revenue__c*(VALUE(TEXT( GP__c))/100)) -

(Revenue__c*(VALUE(TEXT(Budget__r.Allocations__c))/100)) -

(Revenue__c*(VALUE(TEXT(Budget__r.X3_Program_Fees__c))/100))),

0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>