force-app/main/default/objects/Budget_Line_Item__c/fields/Budget_Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Goal_Amount__c</fullName>
    <description>This will bring the value of budget goal formula so we can use it on Rollup summary.</description>
    <label>Budget Goal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>