force-app/main/default/objects/Budget_Line_Item__c/fields/Burden__c.field-meta.xml
<CustomField>
    <fullName>Burden__c</fullName>
    <formula>(In_House_Rate_Full__c * 0.2)  *  In_House_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burden</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>