force-app/main/default/objects/Budget_Line_Item__c/fields/Bypass_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Calculation</label>
    <type>Checkbox</type>
</CustomField>