force-app/main/default/objects/Budget_Line_Item__c/fields/DonotDelete__c.field-meta.xml
<CustomField>
    <fullName>DonotDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DonotDelete</label>
    <type>Checkbox</type>
</CustomField>