force-app/main/default/objects/Budget_Line_Item__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>