force-app/main/default/objects/Budget_Line_Item__c/fields/From_Xact__c.field-meta.xml
<CustomField>
    <fullName>From_Xact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Xact</label>
    <type>Checkbox</type>
</CustomField>