force-app/main/default/objects/Budget_Line_Item__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <description>For XactAnalysis estimate import to budget</description>
    <label>GP %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>