force-app/main/default/objects/Budget_Line_Item__c/fields/In_House_Hours__c.field-meta.xml
<CustomField>
    <fullName>In_House_Hours__c</fullName>
    <label>In-House Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>