force-app/main/default/objects/Budget_Line_Item__c/fields/In_House_Rate_Full__c.field-meta.xml
<CustomField>
    <fullName>In_House_Rate_Full__c</fullName>
    <label>In-House Rate Full</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>