force-app/main/default/objects/Budget_Line_Item__c/fields/In_House_Total__c.field-meta.xml
<CustomField>
    <fullName>In_House_Total__c</fullName>
    <formula>(In_House_Hours__c  *  In_House_Rate_Full__c) + Burden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-House Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>