force-app/main/default/objects/Budget_Line_Item__c/fields/In_House_Totals_BL__c.field-meta.xml
<CustomField>
    <fullName>In_House_Totals_BL__c</fullName>
    <formula>(In_House_Hours_BL__c  * In_House_Rate_BL__c ) + Burden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In House Total BL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>