force-app/main/default/objects/Budget_Line_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Created by DemandBlue as part of Xact Integration</description>
    <label>Item Description</label>
    <type>TextArea</type>
</CustomField>