force-app/main/default/objects/Budget_Line_Item__c/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>