force-app/main/default/objects/Budget_Line_Item__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>This is kept for cloning purposes</description>
    <label>OrderNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>