force-app/main/default/objects/Budget_Line_Item__c/fields/Program_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee_Amount__c</fullName>
    <description>This will bring the value of program fees formula so we can use it on Rollup summary.</description>
    <label>Program Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>