force-app/main/default/objects/Budget_Line_Item__c/fields/Program_Fees__c.field-meta.xml
<CustomField>
    <fullName>Program_Fees__c</fullName>
    <formula>Revenue__c * VALUE(TEXT(Budget__r.X3_Program_Fees__c )) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>