force-app/main/default/objects/Budget_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>