force-app/main/default/objects/Budget_Line_Item__c/fields/Selector__c.field-meta.xml
<CustomField>
    <fullName>Selector__c</fullName>
    <label>Selector</label>
    <length>6</length>
    <type>Text</type>
</CustomField>