force-app/main/default/objects/Budget_Line_Item__c/fields/Selector_Full__c.field-meta.xml
<CustomField>
    <fullName>Selector_Full__c</fullName>
    <label>Selector Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>