force-app/main/default/objects/Budget_Line_Item__c/fields/Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor__c</fullName>
    <label>Subcontractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>