force-app/main/default/objects/Budget_Line_Item__c/fields/Subcontractor_bid__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_bid__c</fullName>
    <label>Subcontractor bid</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>