force-app/main/default/objects/Budget_Line_Item__c/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the item tax exempt? Created by DemandBlue as part of Xact Integration</description>
    <label>Tax Exempt?</label>
    <type>Checkbox</type>
</CustomField>