force-app/main/default/objects/Budget_Line_Item__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <label>Trade</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>