force-app/main/default/objects/Budget_Line_Item__c/fields/Trade_Option__c.field-meta.xml
<CustomField>
    <fullName>Trade_Option__c</fullName>
    <label>Trade Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT Acoustical Treatments</fullName>
            </value>
            <value>
                <fullName>APP Appliances</fullName>
            </value>
            <value>
                <fullName>AWN Awnings &amp; Patio Covers</fullName>
            </value>
            <value>
                <fullName>CAB Cabinetry</fullName>
            </value>
            <value>
                <fullName>CLN Cleaning</fullName>
            </value>
            <value>
                <fullName>CNC/MAS Concrete/Masonary</fullName>
            </value>
            <value>
                <fullName>CON Contents</fullName>
            </value>
            <value>
                <fullName>CPS Contents: Packaging, Handling, and Storage</fullName>
            </value>
            <value>
                <fullName>CRD Credit</fullName>
            </value>
            <value>
                <fullName>DMO General Demolition</fullName>
            </value>
            <value>
                <fullName>DOR Doors</fullName>
            </value>
            <value>
                <fullName>DRY Drywall</fullName>
            </value>
            <value>
                <fullName>ELE Electrical</fullName>
            </value>
            <value>
                <fullName>ELS Electrical Special Systems</fullName>
            </value>
            <value>
                <fullName>EQU Heavy Equipment</fullName>
            </value>
            <value>
                <fullName>EXC Excavation</fullName>
            </value>
            <value>
                <fullName>FCC Floor Covering Carpet</fullName>
            </value>
            <value>
                <fullName>FCR Floor Covering Resilient</fullName>
            </value>
            <value>
                <fullName>FCS Floor Covering Stone</fullName>
            </value>
            <value>
                <fullName>FCT Floor Covering Ceramic Tile</fullName>
            </value>
            <value>
                <fullName>FCV Floor Covering Vinyl</fullName>
            </value>
            <value>
                <fullName>FCW Floor Covering Wood</fullName>
            </value>
            <value>
                <fullName>FEE Permits and Fees</fullName>
            </value>
            <value>
                <fullName>FEN Fencing</fullName>
            </value>
            <value>
                <fullName>FNC Finish Carpentry</fullName>
            </value>
            <value>
                <fullName>FNH Finish Hardware</fullName>
            </value>
            <value>
                <fullName>FPL Fireplaces</fullName>
            </value>
            <value>
                <fullName>FPS Fire Protection Systems</fullName>
            </value>
            <value>
                <fullName>FRM Framing &amp; Rough Carpentry</fullName>
            </value>
            <value>
                <fullName>GLS Glass, Glazing, &amp; Storefronts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>