force-app/main/default/objects/Budget_Line_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Created by DemandBlue as part of Xact Integration</description>
    <label>Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>