force-app/main/default/objects/Budget_Line_Item__c/fields/X10_10_Allocation__c.field-meta.xml
<CustomField>
    <fullName>X10_10_Allocation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>10% overhead and 10% profit.</description>
    <label>10/10 Allocation</label>
    <type>Checkbox</type>
</CustomField>